# Multi-Modal-RAG

./: .gitignore  README.md
client/: next.config.ts  package-lock.json  package.json
client/src/app/: globals.css
client/src/app/(dashboard)/projects/[id]/chats/[chatId]/: page.tsx
client/src/components/chat/: MessageItem.tsx  MessageList.tsx
client/src/components/projects/document-details/: ModalHeader.tsx
client/src/lib/: index.ts
server/: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
server/src/: server.py
server/src/routes/: projectFilesRoutes.py
