[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.12.0",
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "amqp==5.3.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.12.0",
    "appdirs==1.4.4",
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.14.3",
    "billiard==4.2.4",
    "boto3==1.42.14",
    "botocore==1.42.14",
    "cachetools==6.2.4",
    "celery==5.6.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "cfgv==3.5.0",
    "charset-normalizer==3.4.4",
    "clerk-backend-api==4.2.0",
    "click==8.3.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "coloredlogs==15.0.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cryptography==45.0.7",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "datasets==4.4.1",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "deprecated==1.3.1",
    "deprecation==2.1.0",
    "dill==0.4.0",
    "diskcache==5.6.3",
    "distlib==0.4.0",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "dotenv==0.9.9",
    "effdet==0.4.1",
    "emoji==2.15.0",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fastapi==0.126.0",
    "filelock==3.20.0",
    "filetype==1.2.0",
    "flatbuffers==25.12.19",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "google-api-core==2.28.1",
    "google-auth==2.45.0",
    "google-cloud-vision==3.11.0",
    "googleapis-common-protos==1.72.0",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.2.0",
    "hpack==4.1.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==0.36.0",
    "humanfriendly==10.0",
    "hyperframe==6.1.0",
    "identify==2.6.15",
    "idna==3.11",
    "instructor==1.13.0",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.11.1",
    "jmespath==1.0.1",
    "joblib==1.5.3",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.4.9",
    "kombu==5.6.1",
    "langchain==1.0.8",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.1.3",
    "langchain-openai==1.0.3",
    "langchain-tavily==0.2.13",
    "langchain-text-splitters==1.0.0",
    "langdetect==1.0.9",
    "langgraph==1.0.4",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.2.15",
    "langsmith==0.4.58",
    "lxml==6.0.2",
    "markdown==3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.1",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.4",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "msoffcrypto-tool==5.4.2",
    "multidict==6.7.0",
    "multiprocess==0.70.18",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "nltk==3.9.2",
    "nodeenv==1.9.1",
    "numpy==2.3.5",
    "olefile==0.47",
    "omegaconf==2.3.0",
    "onnx==1.20.0",
    "onnxruntime==1.23.2",
    "openai==2.9.0",
    "opencv-python==4.11.0.86",
    "openpyxl==3.1.5",
    "orjson==3.11.5",
    "ormsgpack==1.12.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pdf2image==1.17.0",
    "pdfminer-six==20251107",
    "pexpect==4.9.0",
    "pi-heif==1.1.1",
    "pikepdf==10.0.3",
    "pillow==12.0.0",
    "platformdirs==4.5.1",
    "postgrest==2.27.0",
    "pre-commit==4.5.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "proto-plus==1.27.0",
    "protobuf==6.33.2",
    "psutil==7.1.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==22.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycocotools==2.0.11",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyiceberg==0.10.0",
    "pyjwt==2.10.1",
    "pypandoc==1.16.2",
    "pyparsing==3.2.5",
    "pypdf==6.4.2",
    "pypdfium2==5.2.0",
    "pyroaring==1.0.3",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "python-iso639==2025.11.16",
    "python-magic==0.4.27",
    "python-multipart==0.0.21",
    "python-oxmsg==0.0.2",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "ragas==0.4.0",
    "rapidfuzz==3.14.3",
    "realtime==2.27.0",
    "redis==7.1.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rsa==4.9.1",
    "s3transfer==0.16.0",
    "safetensors==0.7.0",
    "scikit-network==0.33.5",
    "scipy==1.16.3",
    "scrapingbee==2.0.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.1",
    "sqlalchemy==2.0.45",
    "stack-data==0.6.3",
    "starlette==0.50.0",
    "storage3==2.27.0",
    "strenum==0.4.15",
    "strictyaml==1.7.3",
    "structlog==25.5.0",
    "supabase==2.27.0",
    "supabase-auth==2.27.0",
    "supabase-functions==2.27.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "timm==1.0.22",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.57.3",
    "ty==0.0.1a33",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "unstructured==0.18.11",
    "unstructured-client==0.42.6",
    "unstructured-inference==1.1.1",
    "unstructured-pytesseract==0.3.15",
    "urllib3==2.6.1",
    "uuid-utils==0.12.0",
    "uvicorn==0.38.0",
    "vine==5.1.0",
    "virtualenv==20.35.4",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
    "websockets==15.0.1",
    "widgetsnbextension==4.0.15",
    "wrapt==2.0.1",
    "xlrd==2.0.2",
    "xlsxwriter==3.2.9",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zstandard==0.25.0",
]
